--- a/shop/package.json
+++ b/shop/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^5.9.4",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-status-bar": "~1.0.4",
