--- a/shop/package.json
+++ b/shop/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-navigation/native": "^5.9.4",
+    "@reduxjs/toolkit": "^1.6.1",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-status-bar": "~1.0.4",
