--- a/shop/package.json
+++ b/shop/package.json
@@ -9,18 +9,21 @@
     "test": "jest --watch"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.13.0",
-    "@react-navigation/native": "^5.9.4",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-navigation/drawer": "^6.1.3",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/stack": "^6.0.6",
     "@reduxjs/toolkit": "^1.6.1",
-    "expo": "~41.0.1",
+    "expo": "^42.0.0",
     "expo-app-loading": "^1.0.3",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.1.0",
-    "react-native-screens": "~3.0.0",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
     "react-navigation-drawer": "^2.7.1",
@@ -33,13 +36,13 @@
     "redux-devtools-extension": "^2.13.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "~7.9.0",
     "@babel/preset-env": "^7.15.0",
     "@testing-library/jest-native": "^4.0.2",
     "@testing-library/react-native": "^7.2.0",
     "babel-jest": "^27.0.6",
     "jest": "^27.0.6",
-    "jest-expo": "^42.1.0",
+    "jest-expo": "^42.0.0",
     "react-test-renderer": "^17.0.2"
   },
   "private": true,
