--- a/shop/package.json
+++ b/shop/package.json
@@ -16,7 +16,9 @@
     "@reduxjs/toolkit": "^1.6.1",
     "expo": "^42.0.0",
     "expo-app-loading": "^1.0.3",
+    "expo-file-system": "~11.1.3",
     "expo-image-picker": "~10.2.2",
+    "expo-sqlite": "~9.2.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
