--- a/shop/package.json
+++ b/shop/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/stack": "^6.0.6",
     "@reduxjs/toolkit": "^1.6.1",
     "expo": "^42.0.0",
-    "expo-app-loading": "^1.0.3",
+    "expo-app-loading": "1.1.2",
     "expo-file-system": "~11.1.3",
     "expo-image-picker": "~10.2.2",
     "expo-location": "~12.1.2",
@@ -25,6 +25,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-maps": "0.28.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
