--- a/shop/package.json
+++ b/shop/package.json
@@ -19,6 +19,7 @@
     "expo-file-system": "~11.1.3",
     "expo-image-picker": "~10.2.2",
     "expo-location": "~12.1.2",
+    "expo-notifications": "~0.12.3",
     "expo-sqlite": "~9.2.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
